--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,6 @@
 {erl_opts, [debug_info]}.
-{deps, [
-  {jsx, "2.10.0"},
-  {jose, "1.9.0"}
-]}.
+{deps, [ {jsx, "2.10.0"},
+         {jose, "1.9.0"},
+         {hackney, "1.15.2"},
+         {iso8601, {git, "https://github.com/kivra/erlang_iso8601.git", {tag, "1.2.0"}}}
+       ]}.
